fix(backend): Fix al controller de get activididades y adición de diferentes schemas al get directorio
